# paper-identifying_and_addressing_data_leakage

./: .gitignore  LICENSE  README.md  chembl_db.yaml  environment.yml  pyproject.toml
chembl_analysis/: README.md  chembl_leakage.ipynb  find_matches.py
chembl_analysis/.ipynb_checkpoints/: chembl_leakage-checkpoint.ipynb
notebooks/: 01_create_data_split.ipynb  01_extract_FEPp4_data.ipynb  01_extract_OpenFE_data.ipynb  02_affinity_baseline_perf_plots.ipynb  02_leakage_analysis.ipynb  02_m1_m3_corrplot.ipynb  02_m1_m3_leakage_analysis.ipynb  02_mol_prop_and_affinity_corrplots.ipynb  02_tanimoto_threshold_plot.ipynb
notebooks_and_scripts/: 02_extract_FEPp4_data.ipynb  02_extract_FEPp4_data.py
src/benchmark_data_leakage/: chembl_requester.py  utils.py
